补页面右下角组件

--- a/04_03_call_choose.html
+++ b/04_03_call_choose.html
@@ -100,6 +100,18 @@
         <div class="menu menu07"></div>
     </div>
 
+    <!-- components -->
+    <div class="component-bottom">
+        <div class="component-about">
+            <img src="./assets/images/components/about.svg">
+            <span>ABOUT</span>
+        </div>
+        <div class="component-config">
+            <img src="./assets/images/components/config.svg">
+            <span>CONFIG</span>
+        </div>
+    </div>
+
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
         var myChart = echarts.init(document.getElementById('Pie'));
